@@ -321,6 +321,7 @@ AC_CONFIG_FILES([
       examples/book/custom/custom_container/Makefile
       examples/book/custom/custom_widget/Makefile
     examples/book/dialogs/Makefile
+        examples/book/dialogs/aboutdialog/Makefile
         examples/book/dialogs/colorselectiondialog/Makefile
         examples/book/dialogs/filechooserdialog/Makefile        
         examples/book/dialogs/fileselection/Makefile
