@@ -1,3 +1,7 @@
+2005-01-06  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/dialog/: Added aboutdialog example.
+
 2.5.4:
 
 2005-01-05  Murray Cumming  <murrayc@murrayc.com>
